# gcanner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
data/: hardware_database.json
gcanner-1.0.0-linux-x64/: test_lib_symbols.sh
gcanner-1.0.0-linux-x64/include/game_req_analyzer/analyzers/: particle_analyzer.hpp
gcanner-1.0.0-linux-x64/include/game_req_analyzer/hardware/: hardware_database.hpp
gcanner-1.0.0-linux-x64/include/game_req_analyzer/utils/: file_utils.hpp  hash_utils.hpp  platform_utils.hpp
include/game_req_analyzer/analyzers/: asset_aggregator.hpp  audio_analyzer.hpp  executable_analyzer.hpp  model_analyzer.hpp  requirement_calculator.hpp  script_analyzer.hpp  texture_analyzer.hpp
include/game_req_analyzer/core/: application.hpp  config.hpp  error.hpp  expected.hpp  logger.hpp  pch.hpp
include/game_req_analyzer/hardware/: hardware_database.hpp  hardware_updater.hpp
include/game_req_analyzer/scanner/: file_scanner.hpp  file_type_detector.hpp
include/game_req_analyzer/ui/: terminal_ui.hpp
include/game_req_analyzer/utils/: math_utils.hpp  string_utils.hpp
installer/: gcanner-installer.sh
installer/linux/: build_installer.sh
installer/macos/: build_installer.sh
installer/windows/: gcanner_installer.nsi
installers/: windows_nsis.nsi
installers/deb/game-req-analyzer/DEBIAN/: control  postinst  prerm
installers/deb/game-req-analyzer/usr/share/doc/game-req-analyzer/: changelog.Debian  copyright
local_install/: README.txt  gcanner
local_install/include/game_req_analyzer/analyzers/: ai_analyzer.hpp  physics_analyzer.hpp  requirement_calculator.hpp  shader_analyzer.hpp
local_install/include/game_req_analyzer/core/: expected.hpp
local_install/include/game_req_analyzer/scanner/: archive_handler.hpp  file_scanner.hpp
local_install/include/game_req_analyzer/utils/: time_utils.hpp
release/gcanner-1.0.0-linux-x64/: AppRun  README.txt
release/gcanner-1.0.0-linux-x64/include/game_req_analyzer/analyzers/: asset_aggregator.hpp  executable_analyzer.hpp  network_analyzer.hpp
release/gcanner-1.0.0-linux-x64/include/game_req_analyzer/core/: pch.hpp
release/gcanner-1.0.0-linux-x64/include/game_req_analyzer/scanner/: file_type_detector.hpp
release/gcanner-1.0.0-linux-x64/include/game_req_analyzer/ui/: interactive_mode.hpp
release/gcanner-1.0.0-linux-x64/include/game_req_analyzer/utils/: json_utils.hpp
src/: CMakeLists.txt  cli_main.cpp  test_analyzers_simple.cpp  test_lib.cpp
src/analyzers/: ai_analyzer.cpp  asset_aggregator.cpp  audio_analyzer.cpp  executable_analyzer.cpp  model_analyzer.cpp  network_analyzer.cpp  particle_analyzer.cpp  physics_analyzer.cpp  requirement_calculator.cpp  script_analyzer.cpp  shader_analyzer.cpp  texture_analyzer.cpp
src/cli/: CMakeLists.txt  gcanner_cli.cpp  gcanner_simple.cpp
src/core/: application.cpp  config.cpp  logger.cpp  main.cpp
src/gui/: AboutDialog.cpp  HardwareBrowserWidget.cpp  HardwareBrowserWidget.hpp  MainWindow.cpp  MainWindow.hpp  ResultsWidget.cpp  ResultsWidget.hpp  ScanWidget.cpp  ScanWidget.hpp  ScanWorker.cpp  ScanWorker.hpp  SettingsDialog.cpp  SettingsDialog.hpp  ThemeManager.cpp  main.cpp  resources.qrc
src/hardware/: benchmark_scraper.cpp  cpu_database.cpp  gpu_database.cpp  hardware_database.cpp  hardware_updater.cpp  ram_database.cpp  storage_database.cpp
src/scanner/: archive_handler.cpp  file_scanner.cpp  file_type_detector.cpp
src/ui/: interactive_mode.cpp  progress_display.cpp  results_formatter.cpp  terminal_ui.cpp
src/utils/: file_utils.cpp  hash_utils.cpp  json_utils.cpp  math_utils.cpp  platform_utils.cpp  string_utils.cpp  time_utils.cpp
